/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    // Apply the java Plugin to add support for Java.
    id 'java'
}

group 'dev.sbutler'
version '1.0'

repositories {
    mavenCentral()
}

compileJava {
    sourceCompatibility = '19'
    targetCompatibility = '19'
}

dependencies {
    implementation 'com.google.inject:guice:5.1.0'
    implementation 'com.google.inject.extensions:guice-assistedinject:5.1.0'
    implementation 'com.google.inject.extensions:guice-throwingproviders:5.1.0'

    implementation 'com.google.guava:guava:31.1-jre'

    implementation 'com.google.mug:mug:6.5'
    implementation 'com.google.mug:mug-guava:6.5'

    implementation 'com.google.flogger:flogger:0.7.4'
    implementation 'com.google.flogger:flogger-log4j2-backend:0.7.4'

    implementation 'com.beust:jcommander:1.82'

    // Testing
    testImplementation 'com.google.guava:guava-testlib:31.1-jre'

    testImplementation "com.google.truth:truth:1.1.3"
    testImplementation 'com.google.truth.extensions:truth-java8-extension:1.1.3'

    testImplementation(platform('org.junit:junit-bom:5.9.2'))
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
}

tasks.withType(JavaCompile).all {
    options.compilerArgs.addAll(['--enable-preview', '--add-modules', 'jdk.incubator.concurrent'])
}

tasks.withType(Test).all {
    jvmArgs.addAll(['--enable-preview', '--add-modules', 'jdk.incubator.concurrent'])
}

tasks.withType(JavaExec) {
    jvmArgs.addAll(['--enable-preview', '--add-modules', 'jdk.incubator.concurrent'])
}
